@@ -5,6 +5,7 @@
  * added preliminary TMPDIR stuff.
  * rewritten tmp_open() and added tmps_open() in common.
  * finished c test file randomization in func.
+ * randomized temporary ac config file in ac_parse_config().
 
 10 Dec 2003  mipsator
  * added new option to pmk to enable check build logging.
